# homework_5

./: pyproject.toml
tests/: test_dict.py
utils/: dicts.py
