[tool.poetry]
name = "homework-5"
version = "0.1.0"
description = ""
authors = ["Kostov Ilya <kick1991@mail.ru>"]
readme = "README.md"
packages = [{include = "homework_5"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
